{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 110,
  "lineage": "a433b073-0414-c437-00df-7379ed964034",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04908c1b8f0fb65a1",
            "domain": "vpc",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "openvpn-eip"
                ]
              }
            ],
            "id": "eipalloc-0919e225af1321948",
            "instance_id": "i-0252c4546205d9926",
            "network_interface_id": "eni-02e9a1960e4434962",
            "network_interface_owner_id": "792334107397",
            "private_dns": "ip-10-0-2-236.us-east-2.compute.internal",
            "private_ip": "10.0.2.236",
            "public_dns": "ec2-18-189-209-172.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.209.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "openvpn-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-051f82378d2999fe0",
            "description": "Allows user to reach Jenkins UI",
            "filter": null,
            "id": "sg-051f82378d2999fe0",
            "name": "jenkins-master-server-security-group",
            "tags": {
              "Name": "jenkins-master-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:security-group/sg-0a2909d7aa7814525",
            "description": "Allows user to reach private applications over VPN ",
            "filter": null,
            "id": "sg-0a2909d7aa7814525",
            "name": "openvpn-server-security-group",
            "tags": {
              "Name": "openvpn-server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c2d58ca165a09dc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "app_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:subnet/subnet-0518c135c41d71126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.8.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "app-private-subnet-2"
                ]
              }
            ],
            "id": "subnet-0518c135c41d71126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792334107397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "app-private-subnet-2"
            },
            "vpc_id": "vpc-09c2d58ca165a09dc"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:792334107397:subnet/subnet-01f7d644dc5630d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-2"
                ]
              }
            ],
            "id": "subnet-01f7d644dc5630d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792334107397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-09c2d58ca165a09dc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fdd91d87f63bb09",
            "arn": "arn:aws:ec2:us-east-2:792334107397:instance/i-0af4fa519d6669a0d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session-manager-instance-profile",
            "id": "i-0af4fa519d6669a0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac8b005f8c763bd9",
            "private_dns": "ip-10-0-8-15.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e86baada7b52cb3",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0518c135c41d71126",
            "tags": {
              "Name": "jenkins-master-server"
            },
            "tags_all": {
              "Name": "jenkins-master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051f82378d2999fe0"
            ]
          },
          "dependencies": [
            "data.aws_security_group.jenkins",
            "data.aws_subnet.app_private_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fdd91d87f63bb09",
            "arn": "arn:aws:ec2:us-east-2:792334107397:instance/i-0252c4546205d9926",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session-manager-instance-profile",
            "id": "i-0252c4546205d9926",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e9a1960e4434962",
            "private_dns": "ip-10-0-2-236.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.236",
            "public_dns": "ec2-18-189-209-172.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.209.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ada6a222c7066e1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f7d644dc5630d45",
            "tags": {
              "Name": "openvpn-server"
            },
            "tags_all": {
              "Name": "openvpn-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2909d7aa7814525"
            ]
          },
          "dependencies": [
            "data.aws_security_group.openvpn",
            "data.aws_subnet.public_subnet_2"
          ]
        }
      ]
    }
  ]
}